...
            android:text="Помогаем людям и питомцам находить друг друга"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="10dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/email_sing_in_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="Вход"
            app:cornerRadius="5dp"
            android:layout_gravity="center"
            android:layout_marginTop="150dp" />
...
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center"-->
<!--            android:layout_marginTop="10dp"-->
<!--            app:cornerRadius="5dp" />-->

        <com.google.android.material.button.MaterialButton
            android:id="@+id/no_account_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:text="Нет аккаунта?"
            app:cornerRadius="5dp"
            android:layout_gravity="center" />
...
