...
                android:paddingTop="40sp"
                android:text="Аккаунт"
                style="@style/TextAppearance.MaterialComponents.Headline6" />

            <!--    Update password    -->
            <Button
                android:id="@+id/profile_fragment_update_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Изменить пароль"
                android:textSize="12sp"
                style="?attr/materialButtonOutlinedStyle" />
...
